tests/golden/compile-fail/type_membership_element_mismatch.rua
fn invalid() -> bool {
    "two" in vec![1, 2, 3]
}
